# icinga2apic-stubs

./: Justfile  README.rst  actions.pyi  configfile.pyi  events.pyi  pyproject.toml  setup.cfg  status.pyi
icinga2apic/: actions.pyi  base.pyi  client.pyi  objects.pyi
icinga2apic-stubs/: objects.pyi
src/icinga2apic-stubs/: actions.pyi  base.pyi  client.pyi  configfile.pyi  objects.pyi
