[project]
name = "icinga2apic-stubs"
version = "0.1.0"
description = "Type stubs for the icinga2apic package."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.8,<4"
readme = "README.rst"
license = "MIT"
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/icinga2apic-stubs"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
]
